<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">zjut_OA</string>
	<string name="action_settings">Settings</string>
	<string name="hello_world">Hello world!</string>
	<string name="menu_userInfo">个人信息</string>
	<string name="menu_friend_list">好友列表</string>
	<string name="menu_find_friend">找好友</string>
	<string name="menu_shake">摇一摇</string>
	<string name="menu_logout">注销</string>
	<string name="menu_about_us">关于我们</string>
	<string name="menu_exit">退出软件</string>
	
	<string name="search">搜索</string>
	<string name="user_login_account">账号</string>
	<string name="user_login_account_tips">请输入你的学号</string>
	<string name="user_login_password">密码</string>
	<string name="user_login_password_tips">请输入你的密码</string>
	<string name="user_login_forgetPassword">忘记密码</string>
	<string name="user_login_rememberPassword">记住密码</string>
	<string name="init_login">登录</string>
	<string name="general_back">返回</string>
	<string name="general_confirm">确定</string>
	
	<string name="friend_info">详细信息</string>
	<string name="import_contacts">导入通讯录</string>
	
	<string name="course_monday">周一</string>
	<string name="course_tuesday">周二</string>
	<string name="course_wendnesday">周三</string>
	<string name="course_thirday">周四</string>
	<string name="course_friday">周五</string>
	<string name="course_saturday">周六</string>
	<string name="course_sunday">周日</string>
	
	<string name="user_data_studentID">学号</string>
	<string name="user_data_qq">QQ</string>
	<string name="user_data_academy">学院</string>
	<string name="user_data_birthday">生日</string>
	<string name="user_data_email">邮箱</string>
	<string name="user_data_place">所在校区</string>
	<string name="user_data_department">部门</string>
	<string name="user_data_association">社团</string>
	<string name="user_data_duty">职务</string>
	<string name="user_data_phone">电话</string>
	<string name="user_data_class_schedule">课表</string>
	<string name="user_data_introduction">简介</string>
	
	 <string name="pull_to_refresh_pull_label">下拉可以刷新</string>
    <string name="pull_to_refresh_release_label">松开可以刷新</string>
    <string name="pull_to_refresh_refreshing_label">加载中...</string>
    <string name="pull_to_refresh_tap_label">下拉可以刷新</string>
    <string name="pull_to_refresh_update">最近更新：</string>
	
	
	<string name="contentDescription">..</string>
	<string name="about_us_version_txt">Ver 1.0.0</string>
	<string name="about_us_bottom_txt">ZJUT_OA Powered by jh"</string>
	<string name="about_us_service_qq_txt">QQ：123456789</string>
	<string name="about_us_txt">我们是可爱的精弘团队</string>
</resources>