<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/rlyt_title_menu"
	android:layout_width="fill_parent"
	android:layout_height="48.0dip"
	android:background="@drawable/ic_title_background" >

	<ImageButton
		android:id="@+id/title_imgbtn_back"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerVertical="true"
		android:layout_marginLeft="6.0dip"
		android:background="@drawable/btn_title_back_selector" />

	<TextView
		android:id="@+id/title_txv_left_text"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignBottom="@id/title_imgbtn_back"
		android:layout_alignLeft="@id/title_imgbtn_back"
		android:layout_alignRight="@id/title_imgbtn_back"
		android:layout_alignTop="@id/title_imgbtn_back"
		android:gravity="center"
		android:maxWidth="50.0dip"
		android:paddingLeft="8.0dip"
		android:shadowColor="@color/title_btn_text_shadow"
		android:shadowDx="0.0"
		android:shadowDy="-1.0"
		android:shadowRadius="1.0"
		android:singleLine="true"
		android:text="@string/general_back"
		android:textColor="@color/title_btn_text"
		android:textSize="12.0sp"
		android:visibility="visible" />

	<ImageButton
		android:id="@+id/title_imgbtn_right"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentRight="true"
		android:layout_centerVertical="true"
		android:layout_marginRight="6.0dip"
		android:background="@drawable/btn_title_confirm_selector"
		android:padding="6.0dip"
		android:src="@drawable/ic_item_import"
		android:visibility="invisible" />

	<TextView
		android:id="@+id/title_txv_right_text"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignBottom="@id/title_imgbtn_right"
		android:layout_alignLeft="@id/title_imgbtn_right"
		android:layout_alignRight="@id/title_imgbtn_right"
		android:layout_alignTop="@id/title_imgbtn_right"
		android:gravity="center"
		android:maxWidth="64.0dip"
		android:padding="6.0dip"
		android:shadowColor="@color/title_btn_text_shadow"
		android:shadowDx="0.0"
		android:shadowDy="-1.0"
		android:shadowRadius="1.0"
		android:singleLine="true"
		android:text="@string/import_contacts"
		android:textColor="@color/title_btn_text"
		android:textSize="12.0sp"
		android:visibility="gone" />

	<TextView
		android:id="@+id/title_txv_title"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerInParent="true"
		android:layout_marginLeft="60.0dip"
		android:layout_marginRight="60.0dip"
		android:gravity="center"
		android:shadowColor="@color/black"
		android:shadowDx="0.0"
		android:shadowDy="-1.0"
		android:shadowRadius="1.0"
		android:singleLine="true"
		android:text="@string/app_name"
		android:textColor="@color/white"
		android:textSize="18.0sp"
		android:textStyle="normal" />

</RelativeLayout>